Adicionando Mapstruct e consertando bugs